--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+Updates compared to upstream:
+- uses selenium and phantomjs in order to deal with sites that require Javascript
+- python 2 and 3 support
+- no support for tncc.py (host checker step)
+
 Juniper VPN Authenticator:
 
 This script authenticates with a Juniper VPN server to generate a session
@@ -13,13 +18,6 @@ password. Once authenticated, the session cookie will be passed to openconnect
 which will connect to the VPN. Note that because the DSID provides full access
 to the VPN, it can be easily passed via stdin to avoid having it show up
 in the process list.
-
-Juniper Networks Host Checker:
-
-A python module, tncc.py, is integrated with juniper-vpn.py and provides
-support for VPN sites which require a host checker step. It is currently only
-tested on a subset of sites and does not yet support sites that require
-periodic host checker updates.
 
 Command line options:
 
